# mmct

./: .gitignore  README.md  SUMMARY.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
docs/: bub.bib  cwa_cmds.tex  documentation.md  index.md  main.tex  ol-softwaremanual.cls
docs/tex/: logo.odg  main.tex
src/mmct/: __init__.pyi  core.py  mc.py  stat.py  tester.py  util.py
test/: bench.py  test_core.py  test_mc.py  test_stat.py  test_tester.py  test_util.py
