[metadata]
# replace with your username:
name = example-pkg-YOUR-USERNAME-HERE
version = 1.0.1
author = Chris Walther Andersen
author_email = cvvand@gmail.com
description = Multinomial Monte Carlo testing
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cwand/mmct
project_urls =
    Bug Tracker = https://github.com/cwand/mmct/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
