[metadata]
# replace with your username:
name = mmct
version = 1.1.2
author = Chris Walther Andersen
author_email = cvvand@gmail.com
description = Multinomial Monte Carlo testing
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cwand/mmct
project_urls =
    Bug Tracker = https://github.com/cwand/mmct/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = mmct
install_requires =
  numpy>=1.20
  scipy>=1.7
python_requires = >=3.6

[options.packages.find]
where = src

[options.extras_require]
testing =
  pytest>=6.0
  pytest-cov>=2.0
  tox>=3.24

[options.package_data]
mmct = py.typed
